--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="content://com.android.providers.media.documents/document/image%3A1000295304" alt="Your Profile Picture" class="profile-picture">
+            <img src="image1.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>SURENDHAR S</h1>
             <p>Web-developer</p>
         </div>
@@ -163,7 +163,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="https://in.docworkspace.com/d/sIDT6v_3aAYLeyb4G" target="_blank" class="download-button">Download CV</a>
+            <a href="Surendar Resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
