--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="Surendar Resume.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="surendar Resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
