--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="section-content">
             <center>
             <h2>final certificate </h2>
-            <a href="Surendar S.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="Surendhar S.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
