--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     
         <div class="section-content">
             <center>
-            <h2>final certificate </h2>
+            <h2>TNSDC FEWD Course complete certificate </h2>
             <a href="Surendhar S.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
