--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="surendar Resume.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="surendar Resume.pdf" target="_blank" class="download-button">Download resume</a>
         </center>
         </div>
         
@@ -175,7 +175,7 @@
         <div class="section-content">
             <center>
             <h2>TNSDC-FEWD COURSE COMPLETED CERTIFICATE  </h2>
-            <a href="Surendhar S.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="Surendhar S.pdf" target="_blank" class="download-button">Download Certificate </a>
         </center>
         </div>
         
